challenge5/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  namespace: api
  labels:
    app: trips-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips-deployment
  template:
    metadata:
      labels:
        app: trips-deployment
    spec:
      containers:
      - name: trips-deployment
        image: "registryszc7583.azurecr.io/trips:1.0"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/secrets"
        # not required, but recommended best practice
        livenessProbe:
          httpGet:
            path: "/api/trips/healthcheck" # hint: there is a healthcheck endpoint - read the README!
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: "/api/trips"
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "aks-keyvault-team-2"
        # resource limits are also best practice - I'll let you figure that out on your own

---
apiVersion: v1
kind: Service
metadata:
  name: trips-service
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: trips-deployment
  ports:
    - protocol: TCP
      name: trips-http
      port: 80 # port you hit
      targetPort: 80 # port inside container
