challenge5/userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-deployment
  namespace: api
  labels:
    app: userprofile-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile-deployment
  template:
    metadata:
      labels:
        app: userprofile-deployment
    spec:
      containers:
      - name: userprofile-deployment
        image: "registryszc7583.azurecr.io/userprofile:1.0"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/secrets"
          readOnly: true 
        livenessProbe:
          httpGet:
            path: "/api/user/healthcheck" 
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: "/api/user/healthcheck"
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "aks-keyvault-team-2"

---
apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
  namespace: api
spec:
  type: ClusterIP #LoadBalancer
  selector:
    app: userprofile-deployment
  ports:
    - protocol: TCP
      name: userprofile-http
      port: 80 # port you hit
      targetPort: 80 # port inside container
